added readme, updated links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<header>
 		<h1>Tic Tac Toe</h1>
-		<p><a href="">View on Github</a> / <a href="">Read the blog post</a></p>
+		<p><a href="https://github.com/ireade/tic-tac-toe-2">View on Github</a> / <a href="http://bitsofco.de/tic-tac-toe-revisited/">Read the blog post</a></p>
 	</header>
 
 
